Did spring-cleaning of code.